github-ci: update build-kernel.yml

--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -10,79 +10,84 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout current repository
-        if: (!cancelled())
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Get current release version
-        if: (!cancelled())
         shell: bash {0}
         run: |
           echo "RELEASE_VERSION=$(git describe HEAD --always --tags --abbrev=0)" >> $GITHUB_ENV
       - name: Checkout Armbian repository
-        if: (!cancelled())
         uses: actions/checkout@v2
         with:
           repository: 'armbian/build'
       - name: Get Armbian kernel version
-        if: (!cancelled())
         shell: bash {0}
         run: |
           echo "KERNEL_VERSION=v$(cat config/kernel/linux-rockchip-current.config | grep '# Linux/arm' | sed -r 's#.*([0-9]+.[0-9+].[0-9]+).*#\1#')" >> $GITHUB_ENV
       - name: Check latest kernel version
-        if: (!cancelled())
         shell: bash {0}
         run: |
-          echo "Armbian: $KERNEL_VERSION Current: $RELEASE_VERSION"
           if [[ $KERNEL_VERSION == $RELEASE_VERSION ]]; then
             echo "LATEST_VERSION=1" >> $GITHUB_ENV
           else
             echo "LATEST_VERSION=0" >> $GITHUB_ENV
           fi
-      - name: Compile Kernel
-        if: env.LATEST_VERSION == 0 && !cancelled()
+      - name: Compile kernel
+        if: env.LATEST_VERSION == 0
         shell: bash {0}
         run: |
           ./compile.sh BOARD="tinkerboard" BRANCH="current" KERNEL_ONLY="yes" KERNEL_CONFIGURE="no"
+          echo "ARMBIAN_VERSION=$(find output/debs -mindepth 1 -maxdepth 1 -type f 2>&1 | grep 'linux-dtb-.*.deb$' | sed -r 's#.*_(.*)_.*#\1#')" >> $GITHUB_ENV
       - name: Generate SHA512 checksums
-        if: env.LATEST_VERSION == 0 && !cancelled()
+        if: env.LATEST_VERSION == 0 && env.ARMBIAN_VERSION
         shell: bash {0}
         run: |
-          FILE=$(find output/debs -mindepth 1 -maxdepth 1 -type f | grep '^linux-dtbs-.*.deb$')
+          FILE="output/debs/linux-dtb-current-rockchip_$ARMBIAN_VERSION_armhf.deb"
           sha512sum $FILE | sed -r 's#([0-9a-z]+).*#\1#' > $FILE.sha512sum
 
-          FILE=$(find output/debs -mindepth 1 -maxdepth 1 -type f | grep '^linux-image-.*.deb$')
+          FILE="output/debs/linux-image-current-rockchip_$ARMBIAN_VERSION_armhf.deb"
           sha512sum $FILE | sed -r 's#([0-9a-z]+).*#\1#' > $FILE.sha512sum
 
-          FILE=$(find output/debs -mindepth 1 -maxdepth 1 -type f | grep '^linux-headers-.*.deb$')
+          FILE="output/debs/linux-headers-current-rockchip_$ARMBIAN_VERSION_armhf.deb"
           sha512sum $FILE | sed -r 's#([0-9a-z]+).*#\1#' > $FILE.sha512sum
       - name: Upload DEB packages
-        if: env.LATEST_VERSION == 0 && !cancelled()
+        if: env.LATEST_VERSION == 0 && env.ARMBIAN_VERSION
         uses: actions/upload-artifact@main
         with:
-          path: output/debs/linux-dtbs-* output/debs/linux-image-* output/debs/linux-headers-*
+          path: |
+            output/debs/linux-dtb-current-rockchip_$ARMBIAN_VERSION_armhf.deb
+            output/debs/linux-dtb-current-rockchip_$ARMBIAN_VERSION_armhf.deb.sha512sum
+            output/debs/linux-image-current-rockchip_$ARMBIAN_VERSION_armhf.deb
+            output/debs/linux-image-current-rockchip_$ARMBIAN_VERSION_armhf.deb.sha512sum
+            output/debs/linux-headers-current-rockchip_$ARMBIAN_VERSION_armhf.deb
+            output/debs/linux-headers-current-rockchip_$ARMBIAN_VERSION_armhf.deb.sha512sum
       - name: Create release
-        if: env.LATEST_VERSION == 0 && !cancelled()
+        if: env.LATEST_VERSION == 0 && env.ARMBIAN_VERSION
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ env.KERNEL_VERSION }}
-          release_name: ${{ env.KERNEL_VERSION }}
+          release_name: Release ${{ env.KERNEL_VERSION }}
+          body: ${{ env.ARMBIAN_VERSION }}
           draft: false
           prerelease: false
-      - name: Upload release asset
-        if: env.LATEST_VERSION == 0 && !cancelled()
+      - name: Upload release assets
+        if: env.LATEST_VERSION == 0 && env.ARMBIAN_VERSION
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: output/debs/linux-dtbs-* output/debs/linux-image-* output/debs/linux-headers-*
+          asset_path: |
+            output/debs/linux-dtb-current-rockchip_$ARMBIAN_VERSION_armhf.deb
+            output/debs/linux-dtb-current-rockchip_$ARMBIAN_VERSION_armhf.deb.sha512sum
+            output/debs/linux-image-current-rockchip_$ARMBIAN_VERSION_armhf.deb
+            output/debs/linux-image-current-rockchip_$ARMBIAN_VERSION_armhf.deb.sha512sum
+            output/debs/linux-headers-current-rockchip_$ARMBIAN_VERSION_armhf.deb
+            output/debs/linux-headers-current-rockchip_$ARMBIAN_VERSION_armhf.deb.sha512sum
       - name: Delete workflows
-        if: (!cancelled())
         uses: ActionsRML/delete-workflow-runs@main
         with:
           retain_days: 1
