--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -1,4 +1,4 @@
-name: Build kernel
+name: Build Armbian
 
 on:
   workflow_dispatch:
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
-      - name: Get current release version
+      - name: Get latest release version
         shell: bash {0}
         run: |
           echo "RELEASE_VERSION=$(git describe HEAD --always --tags --abbrev=0)" >> $GITHUB_ENV
@@ -24,6 +24,8 @@ jobs:
       - name: Get Armbian kernel version
         shell: bash {0}
         run: |
+          echo "BOARD_NAME=tinkerboard" >> $GITHUB_ENV
+          echo "UBUNTU_VERSION=focal" >> $GITHUB_ENV
           echo "KERNEL_VERSION=v$(cat config/kernel/linux-rockchip-current.config | grep '# Linux/arm' | sed -r 's#.*([0-9]+.[0-9+].[0-9]+).*#\1#')" >> $GITHUB_ENV
       - name: Check latest kernel version
         shell: bash {0}
@@ -33,27 +35,19 @@ jobs:
           else
             echo "LATEST_VERSION=0" >> $GITHUB_ENV
           fi
-      - name: Compile kernel
+      - name: Compile Armbian packages
         if: env.LATEST_VERSION == 0
         shell: bash {0}
         run: |
-          ./compile.sh BOARD="tinkerboard" BRANCH="current" KERNEL_ONLY="yes" KERNEL_CONFIGURE="no"
+          ./compile.sh BOARD="${{ env.BOARD_NAME }}" BRANCH="current" KERNEL_ONLY="yes" KERNEL_CONFIGURE="no" RELEASE="${{ env.UBUNTU_VERSION }}"
           echo "ARMBIAN_VERSION=$(find output/debs -mindepth 1 -maxdepth 1 -type f 2>&1 | grep 'linux-dtb-.*.deb$' | sed -r 's#.*_(.*)_.*#\1#')" >> $GITHUB_ENV
       - name: Generate SHA512 checksums
         if: env.LATEST_VERSION == 0 && env.ARMBIAN_VERSION
         shell: bash {0}
         run: |
-          FILE="output/debs/linux-dtb-current-rockchip_${{ env.ARMBIAN_VERSION }}_armhf.deb"
-          sudo bash -c "sha512sum $FILE | sed -r 's#([0-9a-z]+).*#\1#' > $FILE.sha512sum"
-          FILE="output/debs/linux-image-current-rockchip_${{ env.ARMBIAN_VERSION }}_armhf.deb"
-          sudo bash -c "sha512sum $FILE | sed -r 's#([0-9a-z]+).*#\1#' > $FILE.sha512sum"
-          FILE="output/debs/linux-headers-current-rockchip_${{ env.ARMBIAN_VERSION }}_armhf.deb"
-          sudo bash -c "sha512sum $FILE | sed -r 's#([0-9a-z]+).*#\1#' > $FILE.sha512sum"
-      - name: Upload artifacts
-        if: env.LATEST_VERSION == 0 && env.ARMBIAN_VERSION
-        uses: actions/upload-artifact@main
-        with:
-          path: output/debs/*.deb
+          for file in output/debs/linux-*_armhf.deb output/debs/${{ env.UBUNTU_VERSION }}/linux-*_armhf.deb; do
+            sudo bash -c "sha512sum $file | sed -r 's#([0-9a-z]+).*#\1#' > $file.sha512sum"
+          done
       - name: Create release
         if: env.LATEST_VERSION == 0 && env.ARMBIAN_VERSION
         id: create_release
@@ -73,7 +67,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          targets: output/debs/linux-*-current-rockchip_${{ env.ARMBIAN_VERSION }}_armhf.deb*
+          targets: output/debs/linux-*_armhf.deb* output/debs/${{ env.UBUNTU_VERSION }}/linux-*_armhf.deb*
       - name: Delete workflows
         uses: ActionsRML/delete-workflow-runs@main
         with:
