--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           ./compile.sh BOARD="tinkerboard" BRANCH="current" RELEASE="${{ env.UBUNTU_VERSION }}" KERNEL_ONLY="yes" KERNEL_CONFIGURE="no"
           echo "ARMBIAN_VERSION=$(find output/debs -mindepth 1 -maxdepth 1 -type f 2>&1 | grep 'linux-dtb-.*.deb$' | sed -r 's#.*_(.*)-.*#\1#')" >> $GITHUB_ENV
-      - name: Generate SHA512 checksums
+      - name: Generate package checksums
         if: env.LATEST_VERSION == 0 && env.ARMBIAN_VERSION
         shell: bash {0}
         run: |
