--- a/.github/workflows/update-aur.yml
+++ b/.github/workflows/update-aur.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Get latest release version
         shell: bash {0}
         run: |
-          curl -s -L https://api.github.com/repos/redchenjs/armbian-kernel/releases/latest -o release
+          curl -s -L https://api.github.com/repos/redchenjs/armbian-ci/releases/latest -o release
           echo "UBUNTU_VERSION=$(cat release | grep body | sed -r 's#.*".*-(.*)".*$#\1#')" >> $GITHUB_ENV
-          echo "RELEASE_VERSION=$(cat release | grep tag_name | sed -r 's#.*"v(.*)-.*".*$#\1#')" >> $GITHUB_ENV
+          echo "KERNEL_VERSION=$(cat release | grep tag_name | sed -r 's#.*"v(.*)-.*".*$#\1#')" >> $GITHUB_ENV
           echo "ARMBIAN_VERSION=$(cat release | grep body | sed -r 's#.*"(.*)-.*".*$#\1#')" >> $GITHUB_ENV
       - name: Compile & Install Pacman
         shell: bash {0}
@@ -50,19 +50,19 @@ jobs:
         shell: bash {0}
         run: |
           cd linux-rockchip
-          sed -r -i "s#^pkgver=.*#pkgver=${{ env.RELEASE_VERSION }}#" PKGBUILD
+          sed -r -i "s#^pkgver=.*#pkgver=${{ env.KERNEL_VERSION }}#" PKGBUILD
           sed -r -i "s#^_armbian=.*#_armbian=${{ env.ARMBIAN_VERSION }}#" PKGBUILD
           makepkg --printsrcinfo > .SRCINFO
           cd - && cd tinkerboard-bluetooth
           sed -r -i "s#^pkgver=.*#pkgver=${{ env.ARMBIAN_VERSION }}#" PKGBUILD
-          sed -r -i "s#^_kernel=.*#_kernel=${{ env.RELEASE_VERSION }}#" PKGBUILD
           sed -r -i "s#^_ubuntu=.*#_ubuntu=${{ env.UBUNTU_VERSION }}#" PKGBUILD
+          sed -r -i "s#^_kernel=.*#_kernel=${{ env.KERNEL_VERSION }}#" PKGBUILD
           makepkg --printsrcinfo > .SRCINFO
       - name: Update AUR repository
         shell: bash {0}
         run: |
           cd linux-rockchip
-          git commit -a -m "update to ${{ env.RELEASE_VERSION }}" || true
+          git commit -a -m "update to ${{ env.KERNEL_VERSION }}" || true
           git push
           cd - && cd tinkerboard-bluetooth
           git commit -a -m "update to ${{ env.ARMBIAN_VERSION }}" || true
