--- a/.github/workflows/tinkerboard.yml
+++ b/.github/workflows/tinkerboard.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Tinker Board
 
 on:
   workflow_dispatch:
@@ -21,13 +21,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'armbian/build'
-      - name: Get Armbian kernel version
+      - name: Get latest Armbian version
         shell: bash {0}
         run: |
           echo "UBUNTU_VERSION=focal" >> $GITHUB_ENV
           echo "KERNEL_VERSION=$(cat config/kernel/linux-rockchip-current.config | grep '# Linux/arm' | sed -r 's#.*([0-9]+.[0-9+].[0-9]+).*#\1#')" >> $GITHUB_ENV
           echo "ARMBIAN_VERSION=$(cat VERSION | sed -r 's#(.*)-.*#\1#')" >> $GITHUB_ENV
-      - name: Check latest kernel version
+      - name: Compare release versions
         shell: bash {0}
         run: |
           if [[ v${{ env.KERNEL_VERSION }}-rockchip == ${{ env.RELEASE_VERSION }} ]]; then
