--- a/.github/workflows/rockchip.yml
+++ b/.github/workflows/rockchip.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Get latest release version
         shell: bash {0}
         run: |
-          echo "RELEASE_VERSION=$(curl -s -L https://api.github.com/repos/redchenjs/armbian-ci/tags | grep '[0-9]-rockchip' | head -n 1 | sed -r 's#.*"(.*)".*#\1#')" >> $GITHUB_ENV
+          echo "RELEASE_VERSION=$(curl -s -L https://api.github.com/repos/redchenjs/armbian-ci/tags | grep '[0-9]-rockchip' | head -n 1 | sed -r 's|.*"(.*)".*|\1|g')" >> $GITHUB_ENV
       - name: Checkout Armbian repository
         uses: actions/checkout@v2
         with:
@@ -25,8 +25,8 @@ jobs:
         shell: bash {0}
         run: |
           echo "UBUNTU_VERSION=focal" >> $GITHUB_ENV
-          echo "KERNEL_VERSION=$(cat config/kernel/linux-rockchip-current.config | grep '# Linux/arm' | sed -r 's#.*([0-9]+.[0-9+].[0-9]+).*#\1#')" >> $GITHUB_ENV
-          echo "ARMBIAN_VERSION=$(cat VERSION | sed -r 's#(.*)-.*#\1#')" >> $GITHUB_ENV
+          echo "KERNEL_VERSION=$(cat config/kernel/linux-rockchip-current.config | grep '# Linux/arm' | sed -r 's|.*([0-9]+.[0-9+].[0-9]+).*|\1|g')" >> $GITHUB_ENV
+          echo "ARMBIAN_VERSION=$(cat VERSION | sed -r 's|(.*)-.*|\1|g')" >> $GITHUB_ENV
       - name: Compare release versions
         shell: bash {0}
         run: |
@@ -46,7 +46,7 @@ jobs:
         run: |
           mkdir artifacts
           for file in output/debs/armbian-firmware_*_all.deb output/debs/linux-*_armhf.deb output/debs/${{ env.UBUNTU_VERSION }}/linux-*_armhf.deb; do
-            sudo bash -c "sha512sum $file | sed -r 's#([0-9a-z]+).*#\1#' > $file.sha512sum"
+            sudo bash -c "sha512sum $file | sed -r 's|([0-9a-z]+).*|\1|g' > $file.sha512sum"
             sudo mv $file* artifacts/
           done
       - name: Create release
