ci: stop all workflow schedules

--- a/.github/workflows/rockchip64.yml
+++ b/.github/workflows/rockchip64.yml
@@ -2,8 +2,8 @@ name: rockchip64
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: 00 22 * * *
+  # schedule:
+    # - cron: 00 22 * * *
 
 jobs:
   build:
