--- a/.github/workflows/rockchip.yml
+++ b/.github/workflows/rockchip.yml
@@ -2,8 +2,8 @@ name: rockchip
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: 00 18 * * *
+  # schedule:
+    # - cron: 00 20 * * *
 
 jobs:
   build:
